--- a/style.css
+++ b/style.css
@@ -15,7 +15,11 @@ body{
     color: #222;
     -webkit-font-smoothing:antialiased;
     display: grid;
-    grid-template-columns: 1fr 120px minmax(300px, 800px) 1fr;
+    grid-template-columns: 100px 120px minmax(300px, 800px) 1fr;
+}
+
+h1{
+    font-size: 51px !important;
 }
 
 .menu{
@@ -96,6 +100,9 @@ body{
     overflow-y: scroll;
     grid-column:2;
 }
+.animais-lista li{
+    cursor: pointer;
+}
 
 .animais-lista::-webkit-scrollbar {
     width: 18px;
@@ -111,20 +118,45 @@ body{
 .animais-descricao{
     grid-column: 3;
 }
-.animais-descricao section {
+
+
+
+.js .animais-descricao section {
     margin-bottom: 48px;
+    display: none;
 }
+.ativo-section {
+    display: block !important;
+    animation:show 0.5s forwards
+}
+.ativo-faq {
+    display: block !important;
+    animation:downShow 0.5s forwards
+}
+.js .js-scroll{
+    opacity: 0;
+    transform: translate3d(-30px , 0, 0);
+    transition: 0.3s;
+}
+.js .js-scroll.ativo{
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+    transition: 0.3s;
+}
+
 
 
 .faq-lista{
     grid-column: 2 / 4;
 }
+
 .faq-lista dt{
     font-family: monospace;
     font-weight: bold;
     margin-top: 32px;
     margin-bottom: 8px;
     color: #e54;
+    cursor: pointer;
 }
 .faq-lista dt::before{
     content: '';
@@ -134,11 +166,20 @@ body{
     margin-right: 10px;
     background-color: #FB5;
 }
+.faq-lista dt::after{
+    content: '⤵';
+    margin-left: 10px;
+}
+.faq-lista dt.inverteSeta::after{
+    content: '⤴' !important;
+    margin-left: 10px;
+}
 
 .faq-lista dd{
     font-family: helvetica,Arial;
     margin-bottom: 8px;
     margin-left:30px;
+    display: none;
 }
 
 .mapa{
@@ -169,6 +210,30 @@ body{
     padding: 20px;
     font-family: monospace;
     font-weight: bold;
+}
+
+@keyframes downShow{
+    from {
+        opacity: 0;
+        max-height: 0;
+    }
+
+    to {
+        opacity: 1;
+        max-height: 200px;
+    }
+}
+
+@keyframes show {
+    from {
+        opacity: 0;
+        transform: translate3d(-30px, 0 ,0);
+    }
+
+    to {
+        opacity: 1;
+        transform: translate3d(0, 0 ,0);
+    }
 }
 
 
